--- a/startup.html
+++ b/startup.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-
+  <nav class="top-navigation">
+    <div class="content"></div>
+  </nav>
 </body>
 </html>
