--- a/startup.html
+++ b/startup.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>">
     <title>Document</title>
 </head>
 <body>
   <nav class="top-navigation">
-    <div class="content"></div>
+    <div class="content">
+      <ul class="links">
+        <li>Meet Karma</li>
+        <li>How It Works</li>
+        <li>Store</li>
+        <li>Blog</li>
+        <li>Help</li>
+        <li>Log In</li>
+      </ul>
+        <img class="logo" src="img/karma-logo copy.svg" atl="Logo Image" width="26px">
+    </div>
   </nav>
 </body>
 </html>
