--- a/startup.html
+++ b/startup.html
@@ -20,5 +20,13 @@
         <img class="logo" src="img/karma-logo copy.svg" atl="Logo Image" width="26px">
     </div>
   </nav>
+
+  <section class="introduction">
+    <div class="content">
+      <h1>Introducing Karma</h1>
+      <h3>Bring WiFi with you, everywhere you go.</h3>
+      <button>Learn More</button>
+    </div>
+  </section>
 </body>
 </html>
