--- a/startup.html
+++ b/startup.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>">
+    <link rel="stylesheet" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'/>
+    <!--<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+    <link href="css/font-awesome.min.css" rel="stylesheet"/>
+    <link rel="icon" type="image/png" href="favicon_name.png"/>
     <title>Document</title>
 </head>
 <body>
@@ -17,7 +20,7 @@
         <li>Help</li>
         <li>Log In</li>
       </ul>
-        <img class="logo" src="img/karma-logo copy.svg" atl="Logo Image" width="26px">
+      <img class="logo" src="img/karma-logo copy.svg" atl="Logo Image" width="26px">
     </div>
   </nav>
 
@@ -25,8 +28,47 @@
     <div class="content">
       <h1>Introducing Karma</h1>
       <h3>Bring WiFi with you, everywhere you go.</h3>
-      <button>Learn More</button>
+      <button class="big-button">Learn More</button>
     </div>
   </section>
+
+  <section class="cases">
+    <div class="content">
+      <h2>Everyone needs a little Karma.</h2>
+        <ul class="flexbox">
+          <li>
+            <img height="127px" width="127px" src="img/icon-devices copy.svg" alt="internet for all devices">
+            <h3>Internet for all devices</h3>
+          </li>
+          <li>
+            <img height="127px" width="127px" src="img/icon-coffee copy.svg" alt="Boost your productivity">
+            <h3>Boost your productivity</h3>
+          </li>
+          <li>
+            <img height="127px" width="127px" src="img/icon-refill copy.svg" alt="Pay as you go">
+            <h3>Pay as you go</h3>
+          </li>
+        </ul>
+    </div>
+  </section>
+
+  <footer class="social">
+    <div class="content">
+      <hr>
+      <h5>Join us on</h5>
+      <ul class="icons">
+        <li class="twitter">
+          <i class="fa fa-twitter"></i>
+        </li>
+        <li class="facebook">
+          <i class="fa fa-facebook"></i>
+        </li>
+        <li class="instagram">
+          <i class="fa fa-instagram"></i>
+        </li>
+      </ul>
+      <span class="copy">&copy Trevor Callaway</span>
+    </div>
+  </footer>
 </body>
 </html>
